<resources>
    <string name="app_name">keypad</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_star">*</string>
    <string name="button_0">0</string>
    <string name="button_ast">#</string>
    <string name="call_button">call_button</string>
    <string name="insert_name_textView">Insert Name</string>
    <string name="insert_number_textView">Insert Number</string>
    <string name="replace">Replace</string>
    <string name="delatenumber">delateNumber</string>
</resources>